...

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="191dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:adjustViewBounds="false"
            android:contentDescription="TODO"
...
